--- a/业务相关.md
+++ b/业务相关.md
@@ -1,6 +1,6 @@
 1.配置管理模块是用来查看或改变业务侧(IPTV、NGIN...)数据的，即对设备上的配置数据（文件数据或者数据库数据）进行操作以满足业务上的需要。
 如果没有配置管理模块，业务维护人员需要跑到设备上手工修改配置数据，而且得一台一台的过去修改，相当麻烦，且容易出错，有了配置管理就可以对设备进行远程、批量进行设备管理。
 南向：配置模块和设备通信的协议支持SNMP、JDBC、SOAP(SOAP Nomal和ENIP SOAP)。
-操作人员（web浏览器http/https）-->oms2.0(oms数据中心<-->配置管理-->medition)-->设备（snmp、soap...,）
+操作人员（web浏览器http/https）-->oms服务总线(oms数据中心<-->配置管理-->medition)-->设备（snmp、soap...,）
 支持操作：增 删 改 查 同步 应用 撤销 批量修改 文件导入导出 批量同步 批量应用 批量撤销
 表之间的引用、关联删除
